--- a/vadginger-alpha/app/views/Activities/index.html
+++ b/vadginger-alpha/app/views/Activities/index.html
@@ -23,7 +23,7 @@
 	
 		<tr>
 					<td>${entity.beschrijving}</td>
-          <td>${entity.activityDate}</td>
+          <td>${entity.activityDate.format('dd/MM/yyyy', 'nl')}</td>
           <td>${entity.organizationId}</td>
 					<td>${entity.duur}</td>
 					<td>${entity.evaluvated}</td>
