--- a/vadginger-alpha/app/views/Secure/login.html
+++ b/vadginger-alpha/app/views/Secure/login.html
@@ -30,7 +30,7 @@
   </div>
 </div>
 
-<button class="submit ui-corner-all" onclick="this.submit()">Login</button>
+<button class="submit ui-corner-all submitbutton">Login</button>
 <button class="submit ui-corner-all" onclick="history.back();return false;">Terug</button>
 
 
