--- a/vadginger-alpha/app/views/main.html
+++ b/vadginger-alpha/app/views/main.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>#{get 'title' /}</title>
+  <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <!--link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/default.css'}"-->
   <link rel="stylesheet" type="text/css"
