--- a/vadginger-alpha/app/views/ActivityTargetss/show.html
+++ b/vadginger-alpha/app/views/ActivityTargetss/show.html
@@ -1,4 +1,5 @@
 #{extends 'main.html' /}
+<div class="show">
 
 <h2>View ActivityTargets</h2>
 
@@ -38,6 +39,5 @@
   
 
 </div>
-
-<a href="@{ActivityTargetss.index}">Terug</a>
+</div>
 
