--- a/vadginger-alpha/app/views/Centrumss/show.html
+++ b/vadginger-alpha/app/views/Centrumss/show.html
@@ -1,17 +1,17 @@
 #{extends 'main.html' /}
 <div class="show">
 
-<h2>View EvaluvationType</h2>
+<h2>Centrum details</h2>
 
 <div class="entity">
 
   
 	<div class="row">
 		<span class="elem">
-			evalType:
+			naam:
 		</span>
 		<span class="value">
-      ${entity.evalType}
+      ${entity.naam}
 		</span>
 	</div>
   
@@ -19,14 +19,13 @@
   
 	<div class="row">
 		<span class="elem">
-			id:
+			beschrijving:
 		</span>
 		<span class="value">
-      ${entity.id}
+      ${entity.beschrijving}
 		</span>
 	</div>
   
 
-</div>
-</div>
+</div></div>
 
