--- a/vadginger-alpha/app/views/ItemsInActivities/show.html
+++ b/vadginger-alpha/app/views/ItemsInActivities/show.html
@@ -1,4 +1,5 @@
 #{extends 'main.html' /}
+<div class="show">
 
 <h2>View ItemsInActivity</h2>
 
@@ -38,6 +39,5 @@
   
 
 </div>
-
-<a href="@{ItemsInActivities.index}">Terug</a>
+</div>
 
