--- a/vadginger-alpha/app/views/Organisatiess/show.html
+++ b/vadginger-alpha/app/views/Organisatiess/show.html
@@ -1,4 +1,5 @@
 #{extends 'main.html' /}
+<div class="show">
 
 <h2>Organisatie ${entity.naam}</h2>
 
@@ -73,6 +74,7 @@
 	</div>
   
 
+</div>
 </div>
 
 
