--- a/vadginger-alpha/app/views/Sectorss/show.html
+++ b/vadginger-alpha/app/views/Sectorss/show.html
@@ -1,4 +1,5 @@
 #{extends 'main.html' /}
+<div class="show">
 
 <h2>View Sectors</h2>
 
@@ -48,7 +49,5 @@
 	</div>
   
 
-</div>
-
-<a href="@{Sectorss.index}">Terug</a>
+</div></div>
 
