--- a/vadginger-alpha/app/views/VadGingerUsers/show.html
+++ b/vadginger-alpha/app/views/VadGingerUsers/show.html
@@ -1,4 +1,5 @@
 #{extends 'main.html' /}
+<div class="show">
 
 <h2>Gebruiker Detail</h2>
 
@@ -58,7 +59,5 @@
 	</div>
   
 
-</div>
-
-<a href="@{VadGingerUsers.index}">Terug</a>
+</div></div>
 
