--- a/vadginger-alpha/app/views/AttendantTypes/show.html
+++ b/vadginger-alpha/app/views/AttendantTypes/show.html
@@ -1,4 +1,5 @@
 #{extends 'main.html' /}
+<div class="show">
 
 <h2>View AttendantType</h2>
 
@@ -49,6 +50,5 @@
   
 
 </div>
-
-<a href="@{AttendantTypes.index}">Terug</a>
+</div>
 
