--- a/vadginger-alpha/app/views/Evaluvatorss/show.html
+++ b/vadginger-alpha/app/views/Evaluvatorss/show.html
@@ -1,4 +1,5 @@
 #{extends 'main.html' /}
+<div class="show">
 
 <h2>View Evaluvators</h2>
 
@@ -27,6 +28,5 @@
   
 
 </div>
-
-<a href="@{Evaluvatorss.index}">Terug</a>
+</div>
 
