--- a/vadginger-alpha/app/views/GingerUserss/show.html
+++ b/vadginger-alpha/app/views/GingerUserss/show.html
@@ -1,4 +1,5 @@
 #{extends 'main.html' /}
+<div class="show">
 
 <h2>View GingerUsers</h2>
 
@@ -60,6 +61,5 @@
   
 
 </div>
-
-<a href="@{GingerUserss.index}">Terug</a>
+</div>
 
