--- a/vadginger-alpha/app/views/Locationss/show.html
+++ b/vadginger-alpha/app/views/Locationss/show.html
@@ -1,4 +1,5 @@
 #{extends 'main.html' /}
+<div class="show">
 
 <h2>View Locations</h2>
 
@@ -60,6 +61,5 @@
   
 
 </div>
-
-<a href="@{Locationss.index}">Terug</a>
+</div>
 
