--- a/vadginger-alpha/app/views/TargetTypes/show.html
+++ b/vadginger-alpha/app/views/TargetTypes/show.html
@@ -1,4 +1,5 @@
 #{extends 'main.html' /}
+<div class="show">
 
 <h2>View TargetType</h2>
 
@@ -26,7 +27,5 @@
 	</div>
   
 
-</div>
-
-<a href="@{TargetTypes.index}">Terug</a>
+</div></div>
 
