--- a/vadginger-alpha/app/views/UserRoless/show.html
+++ b/vadginger-alpha/app/views/UserRoless/show.html
@@ -1,4 +1,5 @@
 #{extends 'main.html' /}
+<div class="show">
 
 <h2>View UserRoles</h2>
 
@@ -37,7 +38,5 @@
 	</div>
   
 
-</div>
-
-<a href="@{UserRoless.index}">Terug</a>
+</div></div>
 
