--- a/vadginger-alpha/app/views/Users/show.html
+++ b/vadginger-alpha/app/views/Users/show.html
@@ -1,4 +1,5 @@
 #{extends 'main.html' /}
+<div class="show">
 
 <h2>View User</h2>
 
@@ -81,7 +82,5 @@
 	</div>
   
 
-</div>
-
-<a href="@{Users.index}">Terug</a>
+</div></div>
 
