--- a/vadginger-alpha/app/views/main.html
+++ b/vadginger-alpha/app/views/main.html
@@ -102,24 +102,26 @@
           
           
           #{if userRole && userRole.compareTo(models.RoleType.ORG_ADMIN) >=0}
-          <h3><a href="#">Organisaties</a></h3>
+          <h3><a href="#">Mijn centrum</a></h3>
           <div><ul>
             <li><a href="@{Statics.organisationsStart()}">Startpagina</a></li>
-            <li><a href="@{Organisatiess.index()}">Lijst organisaties</a></li>
-            <li><a href="@{Organisatiess.subOrgIndex()}">Lijst sub-organisaties</a></li>
-            <li><a href="@{Locationss.clustersIndex()}">Lijst regionale clusters</a></li>
+            <li><a href="@{Centrumss.showMyCentrum()}">Centrum details</a></li>
+            <li><a href="@{VadGingerUsers.centrumUsers()}">Leden</a></li>
+            <li>Organisaties<ul style="margin-left: 10px;"><li>(<a href="@{Organisatiess.centrumOrganisaties()}">Lijst</a> / <a href="@{Organisatiess.centrumSubOrganisaties()}">Subs</a> / <a href="@{Organisatiess.create()}">Nieuw</a>)</li></ul></li>
+            <li>Clusters (<a href="#">Lijst</a> / <a href="#">Nieuw</a>)</li>
           </ul></div>
           #{/if}
           
            #{if userRole && userRole.compareTo(models.RoleType.ADMIN)>=0 }
           <h3><a href="#">Administratie</a></h3>
           <div><ul>
-            <li>Organisaties (<a href="@{Organisatiess.index()}">Lijst</a> / <a href="@{Organisatiess.create()}">Nieuw</a>)</li>
+            <li>Centra (<a href="@{Centrumss.index()}">Lijst</a> / <a href="@{Centrumss.create()}">Nieuw</a>)</li>
+            <li>Organisaties<ul style="margin-left: 10px;"><li>(<a href="@{Organisatiess.index()}">Lijst</a> / <a href="@{Organisatiess.subOrgIndex()}">Subs</a> / <a href="@{Organisatiess.create()}">Nieuw</a>)</li></ul></li>
             <li>Activiteit types (<a href="@{ActivityTypes.index()}">Lijst</a> / <a href="@{ActivityTypes.create()}">Nieuw</a>)</li>
              #{if userRole && userRole.compareTo(models.RoleType.SUPER_ADMIN)>=0 }
             <li>Sectoren (<a href="@{Sectorss.index()}">Lijst</a> / <a href="@{Sectorss.create()}">Nieuw</a>)</li>
             #{/if}
-            <li>SubSectoren (<a href="@{Sectorss.subIndex()}">Lijst</a> / <a href="@{Sectorss.create()}">Nieuw</a>)</li>
+            <li>Sectoren (<a href="@{Sectorss.subIndex()}">Lijst</a> / <a href="@{Sectorss.create()}">Nieuw</a>)</li>
             <!--li>Doelgroepen (<a href="@{ActivityTargetss.index()}">Lijst</a> / <a href="@{ActivityTargetss.create()}">Nieuw</a>)</li-->
              #{if userRole && userRole.compareTo(models.RoleType.SUPER_ADMIN)>=0 }
             <li>Doelgroep types (<a href="@{TargetTypes.index()}">Lijst</a> / <a href="@{TargetTypes.create()}">Nieuw</a>)</li>
