--- a/vadginger-alpha/app/views/VadGingerUsers/changeEmailIdForm.html
+++ b/vadginger-alpha/app/views/VadGingerUsers/changeEmailIdForm.html
@@ -27,7 +27,7 @@ $("#changeEmailForm").submit(function(){
 	
 });
 </script>
-	<button class="submit ui-corner-all" onclick="this.submit()">Opslaan</button>
+	<button class="submit ui-corner-all submitbutton">Opslaan</button>
   <button class="submit ui-corner-all" onclick="history.back();return false;">Terug</button>
 #{/form}
 </div>
