--- a/vadginger-alpha/app/views/GingerUserss/create.html
+++ b/vadginger-alpha/app/views/GingerUserss/create.html
@@ -5,7 +5,7 @@
 <div class="entity">
 #{form @GingerUserss.save(), id:'createForm'}
 	#{include 'GingerUserss/_form.html' /}
-	<button class="submit ui-corner-all" onclick="this.submit()">Opslaan</button>
+	<button class="submit ui-corner-all submitbutton">Opslaan</button>
   <button class="submit ui-corner-all" onclick="history.back();return false;">Terug</button>
 #{/form}
 </div>
