--- a/vadginger-alpha/app/views/Organisatiess/index.html
+++ b/vadginger-alpha/app/views/Organisatiess/index.html
@@ -1,6 +1,14 @@
 #{extends 'main.html' /}
 
-<h2>${title}</h2>
+<h2>${title}
+#{if mainorgs}
+  van <select id="org4suborgSelector" style="font-size:0.9em;">
+  <option value="all">Alle organisaties</option>
+  #{list items:mainorgs, as:'main'}
+  <option value="${main.id}">${main.naam}</option>
+  #{/list}
+  </select>
+#{/if}</h2>
 
 <table id="mytable" class="entity Organisaties">
 	<thead>
