--- a/vadginger-alpha/app/views/VadGingerUsers/changePasswordForm.html
+++ b/vadginger-alpha/app/views/VadGingerUsers/changePasswordForm.html
@@ -51,7 +51,7 @@ $("form").submit(function(){
 	
 });
 </script>
-	<button class="submit ui-corner-all" onclick="this.submit()">Opslaan</button>
+	<button class="submit ui-corner-all submitbutton">Opslaan</button>
   <button class="submit ui-corner-all" onclick="history.back();return false;">Terug</button>
 #{/form}
 </div>
