--- a/vadginger-alpha/app/views/MaterialsInActivities/edit.html
+++ b/vadginger-alpha/app/views/MaterialsInActivities/edit.html
@@ -5,9 +5,9 @@
 <div class="entity">
 #{form @MaterialsInActivities.update(), id:'createForm'}
 	#{include 'MaterialsInActivities/_form.html' /}
-	<button class="submit ui-corner-all" onclick="this.submit()">Opslaan</button>
+	<button class="submit ui-corner-all submitbutton"">Opslaan</button>
   <button class="submit ui-corner-all" onclick="history.back();return false;">Terug</button>
 #{/form}
 </div>
 
-<a href="@{MaterialsInActivities.index}">Cancel</a>
+
