--- a/vadginger-alpha/app/views/ActivitySectorss/create.html
+++ b/vadginger-alpha/app/views/ActivitySectorss/create.html
@@ -2,12 +2,10 @@
 
 <h2>Create ActivitySectors</h2>
 
-<div class="entity">
+<div class="entity">                                         ^
 #{form @ActivitySectorss.save(), id:'createForm'}
 	#{include 'ActivitySectorss/_form.html' /}
-	<button class="submit ui-corner-all" onclick="this.submit()">Opslaan</button>
+	<button class="submit ui-corner-all submitbutton"">Opslaan</button>
   <button class="submit ui-corner-all" onclick="history.back();return false;">Terug</button>
 #{/form}
 </div>
-
-<a href="@{ActivitySectorss.index}">Cancel</a>
