--- a/vadginger-alpha/app/views/Locationss/create.html
+++ b/vadginger-alpha/app/views/Locationss/create.html
@@ -5,9 +5,9 @@
 <div class="entity">
 #{form @Locationss.save(), id:'createForm'}
 	#{include 'Locationss/_form.html' /}
-	<button class="submit ui-corner-all" onclick="this.submit()">Opslaan</button>
+	<button class="submit ui-corner-all submitbutton"">Opslaan</button>
   <button class="submit ui-corner-all" onclick="history.back();return false;">Terug</button>
 #{/form}
 </div>
 
-<a href="@{Locationss.index}">Cancel</a>
+
