--- a/vadginger-alpha/app/views/Organisatiess/create.html
+++ b/vadginger-alpha/app/views/Organisatiess/create.html
@@ -5,7 +5,7 @@
 <div class="entity">
 #{form @Organisatiess.save(), id:'createForm'}
 	#{include 'Organisatiess/_form.html' /}
-	<button class="submit ui-corner-all" onclick="this.submit()">Opslaan</button>
+	<button class="submit ui-corner-all submitbutton"">Opslaan</button>
   <button class="submit ui-corner-all" onclick="history.back();return false;">Terug</button>
 #{/form}
 </div>
