--- a/vadginger-alpha/app/views/Activities/show.html
+++ b/vadginger-alpha/app/views/Activities/show.html
@@ -4,6 +4,13 @@
 
 <div class="entity">
 
+
+	<div class="row">
+		<span class="elem">
+			<div class="floater"><a href="@{Activities.copy(entity.id)}">Kopi&euml;er<br />deze activiteit</a></div>
+		</span>
+	</div>
+
   
 	<div class="row">
 		<span class="elem">
@@ -203,6 +210,13 @@
 		</span>
 		<span class="value">
       ${entity.userId}
+		</span>
+	</div>
+
+
+	<div class="row">
+		<span class="elem">
+			<div class="floater"><a href="@{Activities.copy(entity.id)}">Kopi&euml;er<br />deze activiteit</a></div>
 		</span>
 	</div>
   
