centrumId fix in creation of Clusters

--- a/vadginger-alpha/app/views/Locationss/_cluster_form.html
+++ b/vadginger-alpha/app/views/Locationss/_cluster_form.html
@@ -31,7 +31,7 @@
   
     <div class="label"></div>
   <div class="field">
-      <input type="hidden" name="entity.centrumId.id" value="${user_cur?.centrumId?.id}"/>
+      <input type="hidden" name="entity.centrumId.id" value="${user_cur.centrumId.id}"/>
   </div>
   <span class="error">${errors.forKey('entity.id')}</span>
   #{/else}
